Update gameEntries Api